Fix bug where headers do not wrap well on mobile because they have the line height of normal content

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -108,6 +108,7 @@
   position: relative;
   padding-bottom: 35px;
 }
+#content h1 { line-height: normal;}
 @media (max-width: 600px) {
   #content, #tos { padding: 10px; padding-bottom: 35px; }
 }
